--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,14 @@
   border-radius: 5px;
   text-align: center;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
+
+.buttons {
+  padding: 20px;
+}
