--- a/src/styles.css
+++ b/src/styles.css
@@ -24,8 +24,16 @@ ul {
 
 .currentTemperature {
   margin: 0px;
-  text-align: left;
+  text-align: right;
   padding: 10px, 0px, 10px, 10px;
   display: block;
   font-size: 30px;
+}
+
+h6 {
+  text-align: center;
+}
+
+.celcius {
+  text-align: right;
 }
