--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,3 @@
-.weather-app {
-  max-width: 600px;
-  padding: 20px;
-  border: 1px solid;
-  border-radius: 5px;
-  text-align: left;
-  margin: 30px auto;
-  display: block;
-}
-
 h2 {
   margin: 10px auto;
 }
@@ -16,6 +6,23 @@ ul {
   margin: 10px auto;
   padding: 0px;
   font-size: 20px;
+}
+
+h6 {
+  text-align: center;
+  margin: 0px auto;
+  font-size: 15px;
+}
+
+.weather-app {
+  max-width: 600px;
+  padding: 20px;
+  border: 1px solid;
+  border-radius: 5px;
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  display: block;
 }
 
 .buttons {
@@ -30,10 +37,6 @@ ul {
   font-size: 30px;
 }
 
-h6 {
-  text-align: center;
-}
-
-.celcius {
-  text-align: right;
+.source-code {
+  max-width: 600px;
 }
