--- a/src/styles.css
+++ b/src/styles.css
@@ -33,10 +33,19 @@ h6 {
   margin: 0px;
   text-align: right;
   padding: 10px, 0px, 10px, 10px;
-  display: block;
-  font-size: 30px;
+  font-size: 60px;
 }
 
 .source-code {
   max-width: 600px;
+}
+
+.col-right {
+  text-align: right;
+}
+
+.units {
+  position: relative;
+  top: -28px;
+  font-size: 20px;
 }
