--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,6 @@ ul {
 
 .col-right {
   text-align: right;
-  margin-bottom: 0px;
 }
 
 .units {
@@ -53,4 +52,12 @@ ul {
   top: -28px;
   font-size: 20px;
   text-align: center;
+}
+
+.buttons {
+  margin: 0px;
+  text-align: right;
+}
+.form-control {
+  margin-bottom: 5px;
 }
