--- a/src/styles.css
+++ b/src/styles.css
@@ -58,11 +58,12 @@ ul {
 
 .units a {
   text-decoration: none;
+  color: black;
 }
 
 .units a:hover {
   color: grey;
-  cursor: pointer;
+  cursor: default;
 }
 
 .buttons {
