--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,23 @@ ul {
 .form-control {
   margin-bottom: 5px;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+
+.weather-forecast-date {
+  font-size: 18px;
+  color: black;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
